--- a/templates/tracker/customer_detail.html
+++ b/templates/tracker/customer_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load tz %}
 {% block page_title %}{{ customer.name }}{% endblock %}
 
 {% block page_actions %}
@@ -72,7 +72,7 @@
                     {% for sale in sales %}
                     <div class="d-flex justify-content-between align-items-center mb-2">
                         <div>
-                            <small class="text-muted">{{ sale.sale_date|date:"M d, Y" }}</small>
+                            <small class="text-muted">{{ sale.sale_date|localtime|date:"M d, Y" }}</small>
                         </div>
                         <div>
                             <strong>TZS {{ sale.total_amount|floatformat:0 }}</strong>
