--- a/templates/tracker/customers_list.html
+++ b/templates/tracker/customers_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load querystring %}
 
 {% block page_title %}Customers{% endblock %}
 
@@ -35,7 +36,7 @@
 <!-- Customers Table -->
 <div class="card">
     <div class="card-header">
-        <h6 class="m-0 font-weight-bold text-primary">Customers ({{ customers.count }})</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Customers ({{ customers.paginator.count }})</h6>
     </div>
     <div class="card-body">
         {% if customers %}
@@ -105,4 +106,27 @@
         {% endif %}
     </div>
 </div>
+{% if page_obj.has_other_pages %}
+<nav aria-label="Customers pagination" class="mt-3">
+    <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?{% url_replace 'page' page_obj.previous_page_number %}">Previous</a></li>
+        {% else %}
+            <li class="page-item disabled"><span class="page-link">Previous</span></li>
+        {% endif %}
+        {% for num in page_obj.paginator.page_range %}
+            {% if num == page_obj.number %}
+                <li class="page-item active"><span class="page-link">{{ num }}</span></li>
+            {% else %}
+                <li class="page-item"><a class="page-link" href="?{% url_replace 'page' num %}">{{ num }}</a></li>
+            {% endif %}
+        {% endfor %}
+                {% if page_obj.has_next %}
+            <li class="page-item"><a class="page-link" href="?{% url_replace 'page' page_obj.next_page_number %}">Next</a></li>
+        {% else %}
+            <li class="page-item disabled"><span class="page-link">Next</span></li>
+        {% endif %}
+    </ul>
+</nav>
+{% endif %}
 {% endblock %}
